# cmd/swag/docs/swagger.json
@@ -396,7 +396,7 @@
         },
         "/auth/login": {
             "post": {
-                "description": "Authenticate a user with username and password credentials",
+                "description": "Authenticate a user with email and password credentials",
                 "consumes": [
                     "application/json"
                 ],
@@ -524,7 +524,7 @@
         },
         "/auth/register": {
             "post": {
-                "description": "Create a new account with username, password, email, and other details",
+                "description": "Create a new account with email, password, and other details",
                 "consumes": [
                     "application/json"
                 ],
@@ -1107,10 +1107,10 @@
         "github_com_edynnt_veloras-api_internal_auth_controller_dto.UserLoginReq": {
             "type": "object",
             "properties": {
-                "password": {
+                "email": {
                     "type": "string"
                 },
-                "username": {
+                "password": {
                     "type": "string"
                 }
             }
@@ -1146,9 +1146,6 @@
                     "type": "string"
                 },
                 "phone_number": {
-                    "type": "string"
-                },
-                "username": {
                     "type": "string"
                 }
             }
