# pkg/response/msg/message.go
@@ -7,12 +7,8 @@ const (
 	ValidationFailed               = "Validation failed"
 	EmailInvalid                   = "Email is invalid"
 	PasswordInvalid                = "Password is invalid"
-	UsernameInvalid                = "Username is invalid"
 	UserIdInvalid                  = "User Id is invalid"
-	UsernameNotFound               = "Username not found"
 	EmailExists                    = "Email already exists"
-	UsernameExists                 = "Username already exists"
-	FailedToCheckUserNameExists    = "Failed to check username exists"
 	FailedToCheckEmailExists       = "Failed to check email exists"
 	UserIsNotVerified              = "User is not verified"
 	UserIsNotActive                = "User is not active"
